--- a/public/index.html
+++ b/public/index.html
@@ -25,6 +25,11 @@
 			rel="stylesheet"
 			href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css"
 		/>
+		<link
+			rel="stylesheet"
+			href="https://fonts.googleapis.com/css?family=Lora"
+		/>
+
 		<!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
