--- a/public/index.html
+++ b/public/index.html
@@ -16,17 +16,14 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css"
     />
-    <link
-      rel="stylesheet"
-      href="https://fonts.googleapis.com/css?family=Lora"
-    />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lora" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD"
       crossorigin="anonymous"
     />
-    <title>React App</title>
+    <title>Manos Creativas</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
